fix: document body overflowed viewpor due to falsy navbar css class

--- a/src/app/monitoring/containers/explore-logs/explore-logs.component.scss
+++ b/src/app/monitoring/containers/explore-logs/explore-logs.component.scss
@@ -1,6 +1,7 @@
 .container {
     margin-top: 1%;
     min-height: 60vh;
+    max-width: 100vw;
 }
 .head {
     display: grid;
